--- a/01 - JavaScript Drum Kit/index.html
+++ b/01 - JavaScript Drum Kit/index.html
@@ -56,7 +56,14 @@
     <audio data-key="74" src="sounds/snare.wav"></audio>
     <audio data-key="75" src="sounds/tom.wav"></audio>
     <audio data-key="76" src="sounds/tink.wav"></audio>
-
-    <script></script>
+    <!-- add events to the kdb -->
+    <script>
+      window.addEventListener("keydown", function(e) {
+        const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+        if (!audio) return; // stops the function from running
+        audio.currentTime = 0; // indicates the position for the playback
+        audio.play();
+      });
+    </script>
   </body>
 </html>
