--- a/02 - JS and CSS Clock/index.html
+++ b/02 - JS and CSS Clock/index.html
@@ -3,6 +3,12 @@
   <head>
     <title>JS + CSS Clock</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="clock">
@@ -13,4 +19,22 @@
       </div>
     </div>
   </body>
+  <script>
+    const secondHand = document.querySelector(".second-hand");
+    const minuteHand = document.querySelector(".minute-hand");
+    const hourHand = document.querySelector(".hour-hand");
+
+    function setDate() {
+      const now = new Date();
+      const seconds = now.getSeconds();
+      const minutes = now.getMinutes();
+      const hour = now.getHours();
+
+      secondHand.innerHTML = seconds < 10 ? "0" + seconds : seconds;
+      minuteHand.innerHTML = minutes < 10 ? `0${minutes}:` : `${minutes}:`;
+      hourHand.innerHTML = hour < 10 ? `0${hour}:` : `${hour}:`;
+    }
+
+    setInterval(setDate, 1000);
+  </script>
 </html>
